tests/baselines/reference/lateBoundFunctionMemberAssignmentDeclarations.errors.txt
index.ts(4,1): error TS7022: 'foo[_private]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.


==== index.ts (1 errors) ====
    export function foo() {}
    foo.bar = 12;
    const _private = Symbol();
    foo[_private] = "ok";
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS7022: 'foo[_private]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    
    const x: string = foo[_private];
    